---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/video.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "\n  Prefers to use `source` element:\n  ",
      {
        "type": "VideoObject",
        "contentUrl": "video.mp4",
        "mediaType": "video/mp4"
      },
      "\n"
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "\n  Falls back to using `src` on `video` element:\n  ",
      {
        "type": "VideoObject",
        "contentUrl": "video.mp4"
      },
      "\n"
    ]
  }
]
